--- a/src/components/common/CommonButton/CommonButton.css
+++ b/src/components/common/CommonButton/CommonButton.css
@@ -1,8 +1,8 @@
 @import url('/src/style/variable.css');
 
 .common-button {
-  background-color: var(--primary);
-  color: var(--white);
+  background-color: #373f67; /* var(--primary)*/
+  color: #ffffff; /* var(--white) */
   text-align: center;
   padding: 8px 126px;
   border-radius: 8px;
