--- a/src/components/common/CommonCartegory/CommonCartegory.css
+++ b/src/components/common/CommonCartegory/CommonCartegory.css
@@ -1,4 +1,4 @@
-@import url('/src/style/variable.css');
+@import url('/src/style/reset.css');
 
 label {
   position: relative;
@@ -16,12 +16,12 @@ label {
 }
 
 .title {
-  font-size: 0.75rem; /* var(--label---small)*/
+  font-size: var(--label---small);
   color: #e9e9e9;
 }
 
 .detail {
-  font-size: 1.33rem; /* var(--label---large) */
+  font-size: var(--label---large);
 }
 
 .container {
@@ -34,7 +34,7 @@ label {
   height: 18px;
   border-radius: 50%;
   background-color: #d3d3d3;
-  background-image: url('/src/assets/common/plus.svg');
+  background-image: url('/src/assets/common/cartegory/plus.svg');
   background-size: contain;
   align-self: center;
 }
@@ -46,7 +46,7 @@ label {
 
 [type='checkbox']:checked + .content .check-icon {
   background-color: white;
-  background-image: url('/src/assets/common/check.svg');
+  background-image: url('/src/assets/common/cartegory/check.svg');
 }
 
 [type='checkbox']:focus + .content {
