--- a/src/components/common/CommonCartegory/CommonCartegory.css
+++ b/src/components/common/CommonCartegory/CommonCartegory.css
@@ -1,54 +1,56 @@
 @import url('/src/style/reset.css');
 
-label {
-  position: relative;
-  cursor: pointer;
-}
+.category {
+  label {
+    position: relative;
+    cursor: pointer;
+  }
 
-.content {
-  display: flex;
-  gap: 20px;
-  background-color: #a7a7a7;
-  padding: 12px;
-  border-radius: 8px;
-  position: absolute;
-  color: black;
-}
+  .content {
+    display: flex;
+    gap: 20px;
+    background-color: #a7a7a7;
+    padding: 12px;
+    border-radius: 8px;
+    position: absolute;
+    color: black;
+  }
 
-.title {
-  font-size: var(--label---small);
-  color: #e9e9e9;
-}
+  .title {
+    font-size: var(--label---small);
+    color: #e9e9e9;
+  }
 
-.detail {
-  font-size: var(--label---large);
-}
+  .detail {
+    font-size: var(--label---large);
+  }
 
-.container {
-  display: flex;
-  flex-direction: column;
-}
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
 
-.check-icon {
-  width: 18px;
-  height: 18px;
-  border-radius: 50%;
-  background-color: #d3d3d3;
-  background-image: url('/src/assets/common/cartegory/plus.svg');
-  background-size: contain;
-  align-self: center;
-}
+  .check-icon {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background-color: #d3d3d3;
+    background-image: url('/src/assets/common/cartegory/plus.svg');
+    background-size: contain;
+    align-self: center;
+  }
 
-[type='checkbox']:checked + .content {
-  background-color: #373f67;
-  color: white;
-}
+  [type='checkbox']:checked + .content {
+    background-color: #373f67;
+    color: white;
+  }
 
-[type='checkbox']:checked + .content .check-icon {
-  background-color: white;
-  background-image: url('/src/assets/common/cartegory/check.svg');
-}
+  [type='checkbox']:checked + .content .check-icon {
+    background-color: white;
+    background-image: url('/src/assets/common/cartegory/check.svg');
+  }
 
-[type='checkbox']:focus + .content {
-  box-shadow: 1px 1px 4px 1px #929292;
+  [type='checkbox']:focus + .content {
+    box-shadow: 1px 1px 4px 1px #929292;
+  }
 }
