--- a/src/components/finished/finished.css
+++ b/src/components/finished/finished.css
@@ -27,6 +27,7 @@ button#completeButton.active {
   height: 34px;
   padding: 6px 0px 6px;
   font-size: 18.66px;
+  color: #9DA1B4;
   font-family: 'Pretendard', sans-serif;
   font-weight: 600;
   border: none;
@@ -38,6 +39,7 @@ button#completeButton.active {
   resize: none;
   padding: 12px 0px 104px;
   font-size: 14px;
+  color: #919191;
   font-family: 'Pretendard', sans-serif;
   font-weight: 400;
   border: none;
