--- a/src/components/info/info.css
+++ b/src/components/info/info.css
@@ -8,7 +8,13 @@
   border-radius: 10px;
   padding: 12px 16px;
   color: white;
+  font-family: 'Pretendard', sans-serif;
   font-size: 10.5px;
+  font-weight: 400;
+}
+
+strong {
+  font-weight: 600;
 }
 
 a {
