--- a/src/components/info/info.html
+++ b/src/components/info/info.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>info | writeQna components</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/pretendard@latest/dist/web/variable/pretendardvariable.css"
+    />
     <link rel="stylesheet" href="./info.css" />
   </head>
   <body>
