[Feat] 비동기로 이벤트 실행
- 빠른 클릭 처리
- 순차적으로 실행되게 처리

Resolved #60

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -8,10 +8,9 @@
     <script type="module" src="/src/components/index.js"></script>
     <link rel="stylesheet" href="/src/style/best-reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
-    <link rel="stylesheet" href="/src/components/Header.css" />
   </head>
 
   <body>
-    <base-header></base-header>
+    <region-button></region-button>
   </body>
 </html>
