[Feat] : 페이지 html
- signUp 페이지
- start 페이지
- Back 컴포넌트 css 변경

--- a/src/components/common/Back/Back.css
+++ b/src/components/common/Back/Back.css
@@ -1,5 +1,8 @@
 .back {
-  padding: 8px 12px;
+  padding: 0px 8px 0px 0px;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .back-icon {
