[Feat]포켓베이스 목록연동과 클릭시 현재 장소 변경
- 포켓베이스 목록연동
- 현재 장소 변경 동기화

Resolved #6

--- a/src/components/Main/RegionMenu/Region.css
+++ b/src/components/Main/RegionMenu/Region.css
@@ -43,9 +43,15 @@ button {
     font-size: 0.875rem;
     line-height: 150%;
     font-weight: 500;
+    color: var(--contents--content-tertiary);
+    cursor: pointer;
   }
 
-  & li:last-child a {
+  & .highlighted {
+    color: var(--black);
+  }
+
+  & li a {
     color: var(--contents--content-tertiary);
   }
 
