--- a/src/components/common/CommonButton/CommonButton.css
+++ b/src/components/common/CommonButton/CommonButton.css
@@ -10,12 +10,18 @@
   color: var(--white);
   text-align: center;
   min-width: 254px;
-  width: 300px;
+  width: 100%;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-block: 8px;
   border-radius: 8px;
-  height: 36px;
+  height: 40px;
   cursor: pointer;
   white-space: nowrap;
+}
+
+button[disabled] {
+  background-color: var(--contents--content-secondary);
+  color: var(--background);
+  cursor: not-allowed;
 }
