--- a/src/components/signUp/number/number.css
+++ b/src/components/signUp/number/number.css
@@ -2,11 +2,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .number-input {
-  position: relative;
-  padding: 8px 12px;
+  padding: 8px 16px;
   border-radius: 4px;
   height: 22px;
   width: 100%;
@@ -14,17 +14,19 @@
   font-size: var(--paragraph---medium);
 }
 
-.number-input:placeholder {
-  color: --contents--content-tertiary;
+.number-input::placeholder {
+  color: var(--contents--content-tertiary);
 }
 
 .required {
-  margin-left: -20px;
-  margin-inline-start: -20px;
+  /* margin-left: -20px;
+  margin-inline-start: -20px; */
   background-color: var(--secondary);
   padding: 9px 1px;
   border-radius: 4px;
   z-index: 999;
+  position: absolute;
+  left: 10px;
   display: none;
 }
 
