--- a/src/components/Main/State/State.css
+++ b/src/components/Main/State/State.css
@@ -1,5 +1,3 @@
-@import url(/src/style/variable.css);
-
 .container {
   display: flex;
   align-items: center;
@@ -8,7 +6,7 @@
 
 .status {
   padding: 0.25rem 0.5rem;
-  border-radius: 4px;
+
   font-size: 0.656rem;
   font-weight: 600;
   white-space: nowrap;
@@ -17,18 +15,26 @@
   align-items: center;
 }
 
-.status.hidden {
-  display: none;
+.status {
+  & .hidden {
+    display: none;
+  }
 }
 
-.status.reserved {
-  background-color: #719cf7;
-  color: white;
+.status {
+  &.reserved {
+    border-radius: 4px;
+    background-color: #719cf7;
+    color: white;
+  }
 }
 
-.status.complete {
-  background-color: #9da1b4;
-  color: white;
+.status {
+  &.complete {
+    border-radius: 4px;
+    background-color: #9da1b4;
+    color: white;
+  }
 }
 
 .price {
