--- a/src/components/Main/MainButton/MainButton.css
+++ b/src/components/Main/MainButton/MainButton.css
@@ -1,6 +1,6 @@
 button {
-  background-color: var(--primary);
-  height: 1.8125rem;
+  background-color: var(--white);
+  height: 27px;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   padding-inline: 1.25rem;
@@ -8,6 +8,7 @@ button {
   padding-bottom: 0.375rem;
   padding-block: 0.375rem;
   border-radius: var(--border-radius---large);
+  border: 2px solid var(--contents--content-tertiary);
 
   display: flex;
   justify-content: center;
@@ -25,7 +26,8 @@ button {
 }
 
 .checked {
-  background-color: red;
+  background-color: var(--primary);
+  border: 2px solid var(--primary);
 }
 
 .hidden {
