[feat]: withUs 컴포넌트 추가 - feature/board 브랜치에 withUs 컴포넌트 만들었습니다.

--- a/src/components/withUs/withUs.html
+++ b/src/components/withUs/withUs.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>withUs | board components</title>
     <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="withUs.css" />
+    <script type="module" src="WithUs.js"></script>
   </head>
   <body>
-    <div class="withUs">text</div>
+    <with-us class="withUs" text="text"></with-us>
   </body>
 </html>
