--- a/src/style/variable.css
+++ b/src/style/variable.css
@@ -11,6 +11,8 @@
   --contents--content-primary: #000000;
   --contents--content-secondary: #919191;
   --contents--content-tertiary: #9da1b4;
+  --components--component-lightgray: #c4c7d2;
+  --components--component-person: #b1b4c3;
 
   /* Text-size styles */
   /* base size: label---medium (14px) */
