--- a/src/components/Main/ListItem/ListItem.css
+++ b/src/components/Main/ListItem/ListItem.css
@@ -5,7 +5,7 @@
 .list-item {
   display: flex;
   background: var(--background);
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #d3d3d3;
   padding: 12px;
   gap: 16px;
   position: relative;
