--- a/src/components/index.html
+++ b/src/components/index.html
@@ -8,9 +8,13 @@
     <script type="module" src="/src/components/index.js"></script>
     <link rel="stylesheet" href="/src/style/best-reset.css" />
     <link rel="stylesheet" href="/src/style/variable.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="/src/components/Board/BoardInfoItems/BoardInfoItems.css"
+    /> -->
   </head>
 
   <body>
-    <board-person></board-person>
+    <board-info-items></board-info-items>
   </body>
 </html>
