[Feat] board/filed 게시글 컴포넌트 구현
- 하위 컴포넌트에서 텍스트 받아와 구현

resolved #81

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="/src/style/variable.css" />
     <!-- <link
       rel="stylesheet"
-      href="/src/components/Board/BoardInfoItems/BoardInfoItems.css"
+      href="/src/components/Board/BoardField/BoardField.css"
     /> -->
   </head>
 
   <body>
-    <board-info-items></board-info-items>
+    <board-field></board-field>
   </body>
 </html>
