--- a/src/components/Main/MainButton/MainButton.css
+++ b/src/components/Main/MainButton/MainButton.css
@@ -1,14 +1,16 @@
 button {
   background-color: var(--white);
   height: 27px;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  padding-inline: 1.25rem;
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-  padding-block: 0.375rem;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-inline: 8px;
+
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-block: 4px;
   border-radius: var(--border-radius---large);
   border: 2px solid var(--contents--content-tertiary);
+  white-space: nowrap;
 
   display: flex;
   justify-content: center;
@@ -22,6 +24,7 @@ button {
 
   & span {
     margin-bottom: 0.125rem;
+    font-size: var(--paragraph---small);
   }
 }
 
