--- a/src/components/Main/RegionMenu/RegionMenu.css
+++ b/src/components/Main/RegionMenu/RegionMenu.css
@@ -6,11 +6,18 @@ body.modal-overlay {
 nav {
   padding-right: 20px;
   padding-left: 20px;
+  padding-top: 10px;
   display: flex;
   flex-direction: row;
   height: 40px;
+  background-color: var(--white);
 
   border-bottom: 3px solid #d3d3d3;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 button {
