--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -3,11 +3,17 @@
 header {
   width: 100%;
   background-color: var(--background);
+
   display: flex;
   justify-content: center; /* 수평 가운데 정렬 */
   align-items: center; /* 수직 가운데 정렬 */
   padding-top: 0.5rem;
   padding-bottom: 1.5rem;
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 
   & ul {
     align-items: center;
@@ -15,23 +21,21 @@ header {
     list-style: none;
     padding: 0;
     margin: 0;
-    display: flex;
+
+    display: grid; /* Grid 레이아웃 사용 */
+    grid-template-columns: repeat(5, 1fr); /* 5개의 동일한 너비 열을 설정 */
   }
 
   & li {
-    padding: 0;
-    margin: 0;
     list-style: none;
-    flex-direction: column;
-    margin-inline: 1.875rem;
+
+    text-align: center;
   }
 
   & a {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: block;
     text-decoration: none;
+    color: inherit;
 
     & img {
       width: 2rem;
@@ -42,5 +46,38 @@ header {
     & p {
       margin: 0;
     }
+  }
+}
+
+@media (max-width: 1024px) {
+  ul {
+    grid-template-columns: repeat(
+      4,
+      1fr
+    ); /* 화면 크기가 줄어들면 4개의 열로 배치 */
+  }
+}
+
+@media (max-width: 768px) {
+  ul {
+    grid-template-columns: repeat(
+      3,
+      1fr
+    ); /* 화면이 더 좁아지면 3개의 열로 배치 */
+  }
+}
+
+@media (max-width: 480px) {
+  ul {
+    grid-template-columns: repeat(
+      2,
+      1fr
+    ); /* 화면이 더 좁아지면 2개의 열로 배치 */
+  }
+}
+
+@media (max-width: 360px) {
+  ul {
+    grid-template-columns: 1fr; /* 화면이 아주 좁아지면 한 열로 배치 */
   }
 }
