--- a/src/components/Profile/index1.html
+++ b/src/components/Profile/index1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Component</title>
     <!-- variable.css 파일 추가 -->
-    <link rel="stylesheet" href="./src/style/variable.css" />
+    <link rel="stylesheet" href="/src/style/variable.css" />
   </head>
   <body>
     <!-- Profile/Contents -->
@@ -17,8 +17,11 @@
       count="8"
       message="제가 있는 곳까지 와서 거래했어요."
     ></chat-balloon>
+    <profile-photo></profile-photo>
+    <profile-temperature></profile-temperature>
 
     <!-- 통합 main.js -->
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/components/Profile/main.js"></script>
   </body>
 </html>
