[Style]: css 수정
- 좋아요 이미지 경로수정
- nav-items sticky처리
- stoty-field width 조절

--- a/src/components/Main/NavItems/NavItems.css
+++ b/src/components/Main/NavItems/NavItems.css
@@ -6,7 +6,9 @@
   height: 40px;
   white-space: nowrap;
   overflow: hidden;
-  position: relative;
+  position: sticky;
+  top: -1px;
+  z-index: 999;
 }
 
 .nav-item {
