[BugFix] RegionMenu 수정
- 게시판에서 overlay가 적용되지 않는 오류 수정
- 메뉴컨테이너가 떨어지지 않는 오류 수정

--- a/src/components/Board/BoardField/BoardField.css
+++ b/src/components/Board/BoardField/BoardField.css
@@ -2,11 +2,10 @@
   background-color: var(--white);
   padding: 0.75rem;
 
-  display: flex;
   display: grid;
   grid-template-columns: 1fr auto;
-
-  position: relative;
+  position: relative; /* 'position' 속성 설정 */
+  z-index: 1;
 }
 .content {
   display: flex;
