--- a/src/components/Main/RegionMenu/RegionMenu.css
+++ b/src/components/Main/RegionMenu/RegionMenu.css
@@ -1,6 +1,12 @@
 body.modal-overlay {
   background-color: rgba(0, 0, 0, 0.4);
   overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999; /* 모든 콘텐츠보다 위에 표시 */
 }
 
 nav {
@@ -80,7 +86,9 @@ button {
 .menu-container {
   align-items: center;
   justify-content: center;
-  margin-left: auto;
+  padding-top: 2px; /*미묘한 중앙 처리*/
+  position: absolute;
+  right: 3.8rem; /* 오른쪽 끝에서 떨어지게 설정 */
 }
 
 a img {
