--- a/src/pages/board/board.css
+++ b/src/pages/board/board.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-}
-
 .main-button-container {
   margin-top: 3.75rem;
 
@@ -36,4 +32,30 @@ li {
   padding: 0;
   list-style: none;
   border-bottom: 1px solid var(--contents--content-secondary);
+}
+
+board-field {
+  position: relative;
+  z-index: 5; /* modal-overlay 뒤에 오도록 설정 */
+}
+
+body.modal-overlay::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 9999; /* 최상단으로 배치 */
+}
+
+region-menu {
+  position: relative;
+  z-index: 10000;
+}
+
+base-header {
+  position: relative;
+  z-index: 10000;
 }
