--- a/src/components/common/Header/Header.css
+++ b/src/components/common/Header/Header.css
@@ -24,12 +24,14 @@ header {
 
     display: grid; /* Grid 레이아웃 사용 */
     grid-template-columns: repeat(5, 1fr); /* 5개의 동일한 너비 열을 설정 */
+    gap: 40px;
   }
 
   & li {
     list-style: none;
 
     text-align: center;
+    white-space: nowrap;
   }
 
   & a {
@@ -38,46 +40,14 @@ header {
     color: inherit;
 
     & img {
-      width: 2rem;
-      height: 2rem;
+      width: 1.25rem;
+      height: 1.25rem;
       margin-bottom: 0;
     }
 
     & p {
       margin: 0;
+      font-size: var(--paragraph---small);
     }
-  }
-}
-
-@media (max-width: 1024px) {
-  ul {
-    grid-template-columns: repeat(
-      4,
-      1fr
-    ); /* 화면 크기가 줄어들면 4개의 열로 배치 */
-  }
-}
-
-@media (max-width: 768px) {
-  ul {
-    grid-template-columns: repeat(
-      3,
-      1fr
-    ); /* 화면이 더 좁아지면 3개의 열로 배치 */
-  }
-}
-
-@media (max-width: 480px) {
-  ul {
-    grid-template-columns: repeat(
-      2,
-      1fr
-    ); /* 화면이 더 좁아지면 2개의 열로 배치 */
-  }
-}
-
-@media (max-width: 360px) {
-  ul {
-    grid-template-columns: 1fr; /* 화면이 아주 좁아지면 한 열로 배치 */
   }
 }
