--- a/src/pages/board/board.css
+++ b/src/pages/board/board.css
@@ -1,32 +1,40 @@
 .main-button-container {
-  margin-top: 3.75rem;
-
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 0.2rem;
 
   grid-auto-flow: row;
-  padding-top: 1.4375rem;
+
   padding-bottom: 0.5rem;
 
   padding-left: 0.3125rem;
   padding-right: 0.3125rem;
   padding-inline: 0.3125rem;
+  padding-top: 4.75rem;
 
-  justify-items: center; /* 각 아이템을 수평으로 중앙 정렬 */
+  position: fixed;
+  top: 0;
+  z-index: 2;
+
+  background-color: var(--white);
+  border-bottom: 1px solid var(--contents--content-secondary);
 }
 
 .board-field-container .board-field {
   border: 1px solid var(--contents--content-secondary);
 }
+
 ul {
+  box-sizing: border-box;
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-top: 130px;
+
+  overflow-y: auto;
+  max-height: calc(100vh - 130px);
 }
-li:nth-child(1) {
-  border-top: 1px solid var(--contents--content-secondary);
-}
+
 li {
   margin: 0;
   padding: 0;
@@ -36,7 +44,17 @@ li {
 
 board-field {
   position: relative;
-  z-index: 5; /* modal-overlay 뒤에 오도록 설정 */
+  z-index: 1; /* modal-overlay 뒤에 오도록 설정 */
+}
+
+region-menu {
+  position: relative;
+  z-index: 10000;
+}
+
+base-header {
+  position: relative;
+  z-index: 10000;
 }
 
 body.modal-overlay::before {
@@ -48,14 +66,4 @@ body.modal-overlay::before {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   z-index: 9999; /* 최상단으로 배치 */
-}
-
-region-menu {
-  position: relative;
-  z-index: 10000;
-}
-
-base-header {
-  position: relative;
-  z-index: 10000;
 }
