--- a/src/components/Main/Like/Like.css
+++ b/src/components/Main/Like/Like.css
@@ -1,16 +1,28 @@
-:host {
-  display: inline-block;
+.like-container {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.list-item {
+  position: relative; /* 부모 요소로부터 상대 위치 */
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .like-button {
   all: unset;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  font-family: inherit;
-  font-size: var(--paragraph---small), 0.75rem;
-  color: var(--contents--content-primary), #000000;
-  gap: 2px;
+  justify-content: center;
+  font-size: 0.75rem;
+  color: var(--contents--content-primary, #000000);
+  cursor: pointer;
 }
 
 .heart-icon {
@@ -19,5 +31,5 @@
 }
 
 .count {
-  font-size: 0.656rem;
+  font-size: 0.75rem;
 }
