--- a/src/components/Profile/profileComponents/profile_compmnents.css
+++ b/src/components/Profile/profileComponents/profile_compmnents.css
@@ -1,10 +1,9 @@
 :host {
   display: flex; /* 프로필 페이지 구성상 flex 방식으로 설정 */
   justify-content: center;
-  align-items: center;
-  height: 300px; /* 위치는 임의로 중앙으로 조정 */
+  align-items: center; /* 위치는 임의로 중앙으로 조정 */
+  height: 60px;
   box-sizing: border-box; /* 박스 크기 계산 시 패딩과 테두리 포함 */
-  margin: 1px;
 }
 
 .profile-contents {
