[Feat]: writeQna 페이지 제작 중 - finished, info 컴포넌트 수정했습니다. - wirteQna 페이지 70% 정도 만든 상태입니다. - qnaBoard는 빈 파일 상태입니다.

--- a/src/components/finished/finished.css
+++ b/src/components/finished/finished.css
@@ -27,7 +27,7 @@ button#completeButton.active {
   height: 34px;
   padding: 6px 0px 6px;
   font-size: 18.66px;
-  color: #9DA1B4;
+  color: #9da1b4;
   font-family: 'Pretendard', sans-serif;
   font-weight: 600;
   border: none;
