--- a/src/components/info/info.html
+++ b/src/components/info/info.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>info | writeQna components</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/pretendard@latest/dist/web/variable/pretendardvariable.css"
-    />
-    <link rel="stylesheet" href="./info.css" />
+    <script type="module" src="./info.js"></script>
   </head>
   <body>
-    <p class="info">
-      <strong>안내</strong> 중고거래 관련, 명예훼손, 광고/홍보 목적의 글은
-      올리실 수 없어요.<a href="#">Q&A 운영정책</a>
-    </p>
+    <info-component></info-component>
   </body>
 </html>
