--- a/src/pages/writeQna/writeQna.css
+++ b/src/pages/writeQna/writeQna.css
@@ -1,4 +1,4 @@
-#qnaTitle {
+/* #qnaTitle {
   width: 100%;
   height: 34px;
   padding: 6px 0px 6px;
@@ -7,7 +7,7 @@
   font-family: 'Pretendard', sans-serif;
   font-weight: 600;
   border: none;
-}
+} */
 
 #qnaContent {
   width: 100%;
