--- a/src/components/Main/Like/Like.css
+++ b/src/components/Main/Like/Like.css
@@ -4,15 +4,14 @@
   right: 10px;
   display: flex;
   align-items: center;
-
 }
 
 .list-item {
-  position: relative; 
+  position: relative;
   display: flex;
   flex-direction: column;
   padding: 10px;
-  box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 .like-button {
@@ -20,18 +19,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.75rem; 
+  font-size: 0.75rem;
   color: var(--contents--content-primary, #000000); /* 기본 색상 */
-  cursor: pointer; 
+  cursor: pointer;
+  gap: 2px;
 }
 
 .heart-icon {
   width: 14px;
   height: 14px;
   fill: none;
-  stroke: gray; 
-  stroke-width: 1px; 
-/
+  stroke: gray;
+  stroke-width: 1px;
 }
 
 .like-button.liked {
