--- a/src/components/Profile/index1.html
+++ b/src/components/Profile/index1.html
@@ -18,9 +18,20 @@
       <div class="profile-components">
         <profile-temperature></profile-temperature>
 
-        <profile-contents></profile-contents>
-        <profile-contents></profile-contents>
-        <profile-contents></profile-contents>
+        <!-- 각기 다른 속성으로 변형된 컴포넌트 -->
+        <profile-contents
+          text="활동 배지"
+          link="https://example.com/qna"
+        ></profile-contents>
+        <profile-contents
+          text="판매 상품"
+          link="https://example.com/settings"
+        ></profile-contents>
+        <profile-contents
+          text="받은 매너 평가"
+          link="https://example.com/notices"
+        ></profile-contents>
+
         <chat-balloon
           count="8"
           message="제가 있는 곳까지 와서 거래했어요."
@@ -30,7 +41,7 @@
       <!-- 푸터 -->
       <div class="footer">
         <profile-footer></profile-footer>
-        <p>© 2024 Profile Page. All rights reserved.</p>
+        <p>profile page for test</p>
       </div>
     </div>
 
