--- a/src/components/Profile/profileComponents/profile_compmnents.css
+++ b/src/components/Profile/profileComponents/profile_compmnents.css
@@ -7,15 +7,15 @@
 }
 
 .profile-contents {
-  width: 248px; /* 화면 사이즈에 따라 크기 조정 */
+  width: 100%; /* 화면 사이즈에 따라 크기 조정 */
   height: 21px;
-  padding: 16px; /* 상하좌우 여백을 모두 16px로 설정 */
+  padding: 20px; /* 상하좌우 여백을 모두 16px로 설정 */
   background: var(--background);
-  border: 1px solid var(--contents--content-secondary); /* 전체 테두리 적용 */
+  border: 0.1px solid var(--contents--content-secondary); /* 전체 테두리 적용 */
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 16px;
+  gap: 5px;
   cursor: pointer; /* 마우스 오버 시 포인터 표시 */
 }
 
