--- a/src/components/Main/RegionMenu/RegionMenu.css
+++ b/src/components/Main/RegionMenu/RegionMenu.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body.modal-overlay {
   background-color: rgba(0, 0, 0, 0.4);
   overflow: hidden;
@@ -6,23 +12,23 @@ body.modal-overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 999; /* 모든 콘텐츠보다 위에 표시 */
+  z-index: 999;
 }
 
 nav {
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-top: 10px;
+  padding: 10px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
   flex-direction: row;
   height: 40px;
   background-color: var(--white);
 
   border-bottom: 3px solid #d3d3d3;
 
-  position: fixed;
-  top: 0;
-  left: 0;
+  /* position: fixed; */
+  /* top: 0;
+  left: 0; */
   width: 100%;
 }
 
@@ -54,10 +60,11 @@ button {
 
   list-style: none;
   padding: 0;
-  margin-top: 50px;
+  top: 70px;
   width: 168px;
   padding: 10px;
   border-radius: 8px;
+  z-index: 999;
   background-color: var(--background);
 
   & li {
@@ -87,8 +94,6 @@ button {
   align-items: center;
   justify-content: center;
   padding-top: 2px; /*미묘한 중앙 처리*/
-  position: absolute;
-  right: 3.8rem; /* 오른쪽 끝에서 떨어지게 설정 */
 }
 
 a img {
