[Feat] 주제 클릭 시 출력되는 컴포넌트 완성 - 인덱스 추가 - 주제 클릭시 '참여중' 표시 - Theme에서 사용되는 로컬 변수들 적용
resolved #92

--- a/src/pages/board/board.css
+++ b/src/pages/board/board.css
@@ -68,6 +68,13 @@ body.modal-overlay::before {
   z-index: 9999; /* 최상단으로 배치 */
 }
 
-.main-button-container .category.selected::after {
-  opacity: 1;
+board-theme-list {
+  position: absolute;
+  width: 100%;
+  z-index: 2;
+  bottom: 68px;
+}
+
+.hidden {
+  display: none;
 }
