--- a/src/style/variable.css
+++ b/src/style/variable.css
@@ -13,6 +13,7 @@
   --contents--content-tertiary: #9da1b4;
   --components--component-lightgray: #c4c7d2;
   --components--component-person: #b1b4c3;
+  --components--component-theme: #ebecf0;
 
   /* Text-size styles */
   /* base size: label---medium (14px) */
