--- a/src/components/Main/RegionMenu/RegionMenu.css
+++ b/src/components/Main/RegionMenu/RegionMenu.css
@@ -17,18 +17,19 @@ body.modal-overlay {
 
 nav {
   padding: 10px;
+  padding-top: 10px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  height: 40px;
+  height: 50px;
   background-color: var(--white);
 
   border-bottom: 3px solid #d3d3d3;
 
-  /* position: fixed; */
-  /* top: 0;
-  left: 0; */
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
 }
 
@@ -48,6 +49,7 @@ button {
     margin-right: 0.375rem;
     margin-inline-end: 0.375rem;
     font-size: 1.1663rem;
+    padding-top: 2px; /*미묘한 중앙 처리*/
   }
 }
 
