--- a/src/pages/board/board.css
+++ b/src/pages/board/board.css
@@ -29,7 +29,7 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-top: 5.4375rem;
+  margin-top: 124px;
 
   overflow-y: auto;
   max-height: calc(100vh - 130px);
@@ -54,7 +54,7 @@ region-menu {
 
 base-header {
   position: relative;
-  z-index: 10000;
+  z-index: 9999;
 }
 
 body.modal-overlay::before {
@@ -71,7 +71,7 @@ body.modal-overlay::before {
 board-theme-list {
   position: absolute;
   width: 100%;
-  z-index: 2;
+  z-index: 1;
   bottom: 68px;
 }
 
