--- a/src/style/variable.css
+++ b/src/style/variable.css
@@ -14,6 +14,7 @@
   --components--component-lightgray: #c4c7d2;
   --components--component-person: #b1b4c3;
   --components--component-theme: #ebecf0;
+  --components--component-participation: #d9d9d9;
 
   /* Text-size styles */
   /* base size: label---medium (14px) */
